refactoring. implementing more angular approach.

--- a/src/App.Web/content/site/js/app/modules/chat/chat.html
+++ b/src/App.Web/content/site/js/app/modules/chat/chat.html
@@ -1,12 +1,5 @@
-@{ Layout = "/Views/Shared/_Layout.cshtml"; }
-
 <div class="container">
-	<div class="soft-hero">
-		<h1>ASP.NET vNext &ndash; Hosted Anywhere</h1>
-		<p class="lead">
-			This is a website that's running under ASP.NET vNext.
-		</p>
-	</div>
+	<h1>Chat</h1>
 	<div class="well" ng-controller="ChatCtrl">
 		<form class="form-inline" role="form" onsubmit="return false;">
 			<div class="form-group">
